@@ -444,7 +444,7 @@ def test_modulecol_roundtrip(testdir):
 
 class TestTracebackCutting:
     def test_skip_simple(self):
-        excinfo = py.test.raises(py.test.exc.Skipped, 'py.test.skip("xxx")')
+        excinfo = py.test.raises(py.test.skip.Exception, 'py.test.skip("xxx")')
         assert excinfo.traceback[-1].frame.code.name == "skip"
         assert excinfo.traceback[-1].ishidden()
 
